# splitter

./: com.github.bluej99.Splitter.json  meson.build
data/: com.github.bluej99.Splitter.appdata.xml.in  com.github.bluej99.Splitter.desktop.in  com.github.bluej99.Splitter.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  splitter.gresource.xml  splitter.in  window.py  window.ui
